# agentic_ssh

./: .env.example  .gitignore  .gitleaksignore  AGENTS.md  Cargo.toml  README.md  agentic_ssh.toml.example  glama.json  renovate.json
.beads/: config.yaml  issues.jsonl
.github/: FUNDING.md
.github/workflows/: ci.yml  release.yml
demo/: demo.tape
mcp-agent-install/: Cargo.toml
mcp-agent-install/src/: claude.rs  cursor.rs  grok.rs  kilo.rs  lib.rs
src/: doctor.rs  errors.rs  main.rs  mcp_server.rs  security.rs  ssh_config.rs  ssh_pool.rs  update_check.rs  watch.rs
src/agents/: antigravity.rs  claude.rs  cline.rs  codex.rs  copilot.rs  cursor.rs  gemini.rs  grok.rs  kilo.rs  kimi.rs  kiro.rs  mod.rs  opencode.rs  pi.rs  roo_code.rs  vibe.rs  zed.rs
src/mcp_server/: mod.rs  parsers.rs  tools.rs
