[package]
name = "agentic_ssh"
version = "0.2.0"
edition = "2024"
description = "SSH connection pooling and MCP server for AI agents"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sandbanks/agentic_ssh"
homepage = "https://github.com/sandbanks/agentic_ssh"
documentation = "https://docs.rs/agentic_ssh"

[dependencies]
tokio = { version = "1", features = ["full"] }
russh = { version = "0.61" }
ssh2-config-rs = "0.7"
anyhow = "1"
mimalloc = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
glob = "0.3"
home = "0.5"
async-trait = "0.1"
toml = "1.0"
regex = "1"
clap = { version = "4", features = ["derive"] }
[dev-dependencies]
tempfile = "3"

[package.metadata.binstall]
# Maps perfectly to your workflow's archive output structure
pkg-url = "https://github.com/sandbanks/agentic_ssh/releases/download/v{version}/agentic_ssh-v{version}-{target}.{archive-format}"
pkg-fmt = "Tgz"

[package.metadata.binstall.formats]
# This tells binstall to map your custom cross-compilation names to your tarballs
"aarch64-apple-darwin" = "tar.gz"
"x86_64-unknown-linux-gnu" = "tar.gz"
"aarch64-unknown-linux-gnu" = "tar.gz"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "https://github.com/sandbanks/agentic_ssh/releases/download/v{version}/agentic_ssh-v{version}-aarch64-macos.tar.gz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "https://github.com/sandbanks/agentic_ssh/releases/download/v{version}/agentic_ssh-v{version}-x86_64-linux.tar.gz"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "https://github.com/sandbanks/agentic_ssh/releases/download/v{version}/agentic_ssh-v{version}-aarch64-linux.tar.gz"
