[package]
name = "mcp-agent-install"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
glob = "0.3"
home = "0.5"
anyhow = "1"
toml = "1.0"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
