[package]
name = "mcp-agent-install"
version = "0.1.0"
edition = "2024"
description = "MCP server configuration installer for AI agents (Claude, Cline, Cursor, Zed, etc.)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sandbanks/agentic_ssh"
homepage = "https://github.com/sandbanks/agentic_ssh"
documentation = "https://docs.rs/mcp-agent-install"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
glob = "0.3"
home = "0.5"
anyhow = "1"
toml = "1.0"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
